# cpp_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  runcppcheck.sh
Cpp/: virtual.cpp
cg/: cgCommonDefine.h  color.h  interpolationTest.cpp  model.cpp  model.h  phong.cpp  renderHelp.cpp  renderHelp.h  sampleBox.cpp  sampleGouraund.cpp  sampleModel.cpp  sampleNormal.cpp  sampleSpecular.cpp  sampleTexture.cpp  sampleTriangle.cpp
cpp/: inherits.cpp  virtual.cpp
cpppreference/: ++Test.cpp  algorithmTest.cpp  anyTest.cpp  atomicTest.cpp  autoTest.cpp  bindTest.cpp  calssTest.cpp  constexprTest.cpp  cpp03Test.cpp  cpp11Test.cpp  cpp17Test.cpp  cpp20Test.cpp  dtorTest.cpp  enableSharedFromThisTest.cpp  extendedFriendDeclarationsTest.cpp  fileIOTest.cpp  filesystemTest.cpp  friendTest.cpp  iaddaddTest.cpp  lambdaErrorTest.cpp  lockGuardTest.cpp  memoryTest.cpp  move.cpp  mutexTest.cpp  noexceptTest.cpp  optionalTest.cpp  raiseTest.cpp  regexTest.cpp  removeReferenceTest.cpp  restrictTest.cpp  sharePtrTest.cpp  staticAssertTest.cpp  stringTest.cpp  stringViewTest.cpp  templateTest.cpp  templateTest.h  threadTest.cpp  timerTest.cpp  transformTest.cpp  underlying_type_t_test.cpp  (+7 more)
graphic/common/: camera.h  mesh.cpp  mesh.h  model.cpp  model.h
graphic/gl/: animation.cpp  animation.h  background.cpp  background.h  cube.cpp  cube.h  instancing.cpp  instancing.h  point.cpp  point.h  sharing.cpp  sharing.h  showGLInfo.cpp  showGLInfo.h  sphere.cpp  sphere.h  triangle.cpp
graphic/handle/: textureHandle.h
graphic/metal/: metalTest.mm
graphics/: assignment.cpp  assignment.h  assignment0.cpp  assignment1.cpp  buffer.cpp  buffer.h  eigen3Test.cpp  objLoader.cpp  objLoader.h  opencvTest.cpp  opencvTest.h  program.h  rasterizer.cpp  rasterizer.h  shader.cpp  shader.h  shaderFunc.cpp  shaderFunc.h  texture.cpp  texture.h  triangle.cpp  triangle.h
imageProcess/: channelSwap.cpp  colorTransferBetweenImages.cpp  idwAlgorithm.cpp  imageProcessTest.cpp
imageProcess/blend/: alphaBlend.cpp
imageProcess/channelSwap/: channelSwap.cpp
imageProcess/colorTransform/: colorTransferBetweenImages.cpp
imageProcess/computeGradient/: computeGradient.cpp
imageProcess/computeLaplace/: computeLaplace.cpp
imageProcess/gray/: grayTest.cpp
imageProcess/imageWarping/: baseWarping.cpp  baseWarping.h  idwWarping.cpp  idwWarping.h  rbfWarping.cpp  rbfWarping.h  warpingTest.cpp
imageProcess/mirror/: mirrorTest.cpp
imageProcess/possionBlend/: possionBlend.cpp
imageProcess/ssim/: ssimTest.cpp
include/: base.h  basic_timer.h  commonMacro.h  logger.cpp  test.h  timer.h  vec2f.h  vector2.h
leetCode/: 01.twoSum.cpp  01twoSum.cpp  02.addTwoNumber.cpp  candy (Hard).cpp  leetCodeCommonDefine.h  数字转换为十六进制数.cpp  最大子序列和.cpp  面试.cpp
massSpringSystem/: application.cpp  application.h  massSpringSystem.cpp  rope.h  spring.h
math/: mat4.h  mathDefine.h  matrix4.cpp  matrix4.h  vec2.h  vec3.h  vector2.cpp  vector2.h  vector2.inl  vector3.cpp  vector3.h  vector3.inl
msaaSpringSystem/: mass.h  msaaSpringSystem.cpp  rope.cpp
other/: assign Cookies(Easy).cpp  non-overlapping Intervals (Medium).cpp  数字转换为十六进制数.cpp  最大子序列和.cpp  求一个数组里面最大的两个数.cpp  面试.cpp
qt/: baseWarping.cpp  baseWarping.h  idwWarping.cpp  idwWarping.h  imageWarping.cpp  imageWidget.cpp  imageWidget.h  mainScene.cpp  mainScene.h  mainView.cpp  mainView.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.cpp  mainwindow.ui  qtTest.cpp  qtUtils.cpp  rbfWarping.cpp  rbfWarping.h  warpingWindow.cpp  warpingWindow.h  warpingWindowUI.cpp  warpingWindowUI.h
qt/guiProgramQt5/: test1.cpp
qt/primitive/: line.cpp  line.h  oval.cpp  oval.h  pen.cpp  pen.h  rect.cpp  rect.h  shape.cpp  shape.h
qt/utils/: qtUtils.cpp
qt_demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewwidget.cpp  viewwidget.h  viewwidget.ui
rasterizer/: assignment.cpp  bezierCurve.cpp  bezierCurve.h  buffer.cpp  light.cpp  light.h  meshTriangle.cpp  meshTriangle.h  objLoader.cpp  object.cpp  object.h  opencvMP4Test.cpp  opencvTest.cpp  program.cpp  rasterizer.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shaderFunc.cpp  sphere.cpp  sphere.h  texture.cpp  triangle.h
rasterizer/pathTracing/: ground.cpp  ground.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sphere.cpp  sphere.h
rayTracing/: camera.h  chapter1.cpp  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter5_1.cpp  hitable.h  hitableList.h  material.h  ray.h  sphere.h
resources/shaders/: massSpring.gl.vert
src/: Makefile  Makefile.win  Vec2f.cpp  auto_ptr.cpp  callbackTest.cpp  file.h  gl_utils.c  gl_utils.h  main.c  main.cpp  math_linear.c  math_linear.h  render.c  render.h  shader.h  shared_ptr.cpp  test.cpp  testAuto.cpp  testConst.cpp  testConstantPointer.cpp  testDecltype.cpp  testMemoryAlloc.cpp  texture.c  texture.h  unique_ptr.cpp  vec2f.cpp  vector2.cpp  weak_ptr.cpp
src/lib/: glad.c  nuklear.h  nuklear_glfw_gl3.h  stb_image.h
src/src/: array_stack.c  ecs.c
test/: RETest.cpp  annTest.cpp  asyncTestDemo.cpp  bitsetTest.cpp  bugTest1.cpp  callbackTest.cpp  charTest.cpp  constevalTest.cpp  crashTest.cpp  eigenTest.cpp  emplace_backTest.cpp  jsonTest.cpp  microTest.cpp  moveTest.cpp  myAllocTest.cpp  randomTest.cpp  rapidjsonTest.cpp  recordAbug.cpp  referenceDeclarationTest.cpp  replaceTest.cpp  setCallbackTest.cpp  socketTest.cpp  spdlogTest.cpp  staticExternThreadCrashDemo.cpp  staticTest.cpp  staticTest2.cpp  testAuto.cpp  testCallback.cpp  testConst.cpp  testConstantPointer.cpp  testDecltype.cpp  testLambda.cpp  testMemoryAlloc.cpp  testModernC++.cpp  testRegex.cpp  testSmartPointer.cpp  testSwitchNew.cpp  testTemplate.cpp  vec2f.cpp  virtualFuncTest.cpp  (+1 more)
test/geekTimeCpp/: arrayTest.cpp  binaryLiteralsTest.cpp  forwardTest.cpp  hashTest.cpp  lifeTimeTest.cpp  listTest.cpp  nrvoTest.cpp  outputContainerTest.cpp  priorityQueueTest.cpp  queueTest.cpp  shapeWrapper.cpp  sharedPtrTest.cpp  (+7 more)
utils/: basic_timer.h  logger.cpp  logger.h  memoryTool.cpp  outputContainer.h  publicSingleton.h  stdLibFacilities.h  utils.h
(+254 files in other folders)
